@@ -71,6 +71,8 @@ Other functions and classes for logging purposes
 
 .. autogenerated, see Online Docs
 """
+from __future__ import division
+
 import sys
 import logging
 
@@ -139,11 +141,94 @@ def echo(s=''):
     sys.stderr.write(s)
     sys.stderr.flush()
 
-# TODO Change this to a class.
-# It would have a :start: method, and an :update: method which would update the display at regular intervals
-def progress_meter(current_step , target_step):
+
+class ProgressMeter(object):
+    """Simple progress meter
+
+    Usage::
+
+       u = Universe(PSF, DCD)
+       pm = ProgressMeter(u.trajectory.numframes, interval=100)
+       for ts in u.trajectory:
+           pm.print(ts.frame)
+           ...
+
+    Will produce for a trajectory with 10000 frames
+
+       Step   100/10000 [  1.0%]
+       Step   200/10000 [  2.0%]
+       ...
+
+    as generated by the default *format* string ::
+
+      Step %(step)5d/%(numsteps)d [%(percentage)5.1%%]\r"
+
     """
-    Progress meter for tracking long jobs
-    """
-    percentage_progress = ( float(current_step) / float(target_step) ) * 100.
-    echo('\r%.1f %% done' % percentage_progress)
+    def __init__(self, numsteps, format=None, interval=10, offset=0):
+        """Set up the ProgresMeter
+
+        :Arguments:
+           *numsteps*
+              total number of steps
+        :Keywords:
+           *interval*
+              only calculate progress every *interval* steps [10]
+           *format*
+              a format string with Python variable interpolation. Allowed
+              values:
+
+                * _step_: current step
+                * _numsteps_: total number of steps as supplied in *numsteps*
+                * _percentage_: percentage of total
+
+              The last call to :meth:`ProgressMeter.print` will automatically
+              issue a newline ``\\n`` if the last character is the carriage
+              return ``\\r``.
+
+              If *format* is ``None`` then the default is used.
+              ["Step %(step)5d/%(numsteps)d [%(percentage)5.1%%]\\r"]
+           *offset*
+              number to add to *step*; e.g. if *step* is 0-based then one would
+              set *offset* = 1 [0]
+
+        """
+        self.numsteps = numsteps
+        self.interval = int(interval)
+        self.offset = int(offset)
+        if format is None:
+            format = "Step %(step)5d/%(numsteps)d [%(percentage)5.1%%]\r"
+        self.format = format
+        if self.format.endswith('\r'):
+            self.last_newline = '\n'
+        else:
+            self.last_newline = None
+        self.step = 0
+        self.percentage = 0.0
+        assert numsteps > 0, "numsteps step must be >0"
+        assert interval > 0, "interval step must be >0"
+
+    def update(self, step):
+        """Update the state of the ProgressMeter"""
+        self.step = step + self.offset
+        self.percentage = 100. * self.step/self.numsteps
+
+    def echo(self, step):
+        """Print the state to stderr, but only every *interval* steps.
+
+        1) calls :meth:`~ProgressMeter.update`
+        2) writes step and percentage to stderr with :func:`echo`,
+           using the format string (in :attr:`ProgressMeter.format`)
+
+        The last step is always shown, even if not on an *interval*, and a
+        carriage return is replaced with a new line for a cleaner display.
+        """
+        self.update(step)
+        format = self.format
+        if self.step == self.numsteps:
+            if self.last_newline:
+                format = self.format[:-1] + self.last_newline
+        elif self.step % self.interval == 0:
+            pass
+        else:
+            return
+        echo(format % vars(self))
